# ContractMindInfra

./: README.md
backend/: .gitignore  README.md  create_chat_table.py  example_db_operations.py  pyproject.toml  pytest.ini  render-build.sh  requirements.txt  test_db_connection.py  test_db_setup.py  test_real_data.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: __init__.py  agents.py  analytics.py  chat.py  streams.py  transactions.py  websocket.py
backend/app/blockchain/: client.py  events.py
backend/app/db/: models.py  session.py
backend/app/llm/: __init__.py  base.py  claude.py  factory.py  gemini.py  openai.py
backend/app/middleware/: error_handler.py
backend/app/models/: schemas.py
backend/app/services/: ai_service.py  ai_service_typed.py  analytics_service.py  blockchain_service.py  chat_service.py  execution_service.py  intent_service.py  streams_service.py
backend/app/utils/: logger.py
backend/contracts/abis/: AgentRegistry.json  ContractMindHubV2.json  HubAwareStaking.json  TestToken.json
backend/scripts/: smoke_onchain.py  sync_agents.py  sync_contracts.py
backend/tests/: conftest.py  test_ai_service.py  test_api_doc_endpoints.py  test_api_endpoints.py  test_intent_service.py  test_llm_factory.py  test_onchain_smoke.py
contracts/: README.md  TEST_CONTRACTS.md  foundry.toml
contracts/deployments/: latest.json  somnia-testnet-manual.json
contracts/script/: Deploy.s.sol  DeployTestToken.s.sol
contracts/src/: AgentRegistry.sol  ContractMindHubV2.sol  HubAwareStaking.sol  RegularStaking.sol  TestToken.sol
docs/: DEPLOYMENT.md  INSTALLATION.md  SOMNIA_STREAMS.md  docs.md
frontend/: README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  test_abi.json
frontend/app/: globals.css  (+2 more)
(+69 files in other folders)
